...
                    android:textColor="@drawable/button_text_selector"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!--        waiting -->
            <LinearLayout
                android:id="@+id/btn_entrants_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingVertical="6dp"
                android:paddingHorizontal="8dp"
                android:layout_marginStart="10dp">
...
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <!--    entrants list-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_event_entrant_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        />

...
