<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

   <LinearLayout
       android:layout_width="match_parent"
...
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="16dp">

           <!--        event header-->
           <LinearLayout
               android:id="@+id/btn_event_showcase"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical"
               android:background="@drawable/rounded_md"
               android:backgroundTint="@color/white"
               android:padding="16dp">
...
