...
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        name of the entrant-->
        <TextView
            android:id="@+id/tv_entrant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emma Wilson"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
...
