<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.ualberta.eventlottery.ui.profile.ProfileFragment">


    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/profileplaceholder"
        android:contentDescription="Profile Picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Your name"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        app:layout_constraintStart_toEndOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"/>


    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="yourname@gmail.com"
        android:textSize="14sp"
        android:textColor="#888888"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email account"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Mobile number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <EditText
        android:id="@+id/edit_rec_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Favourite Rec Center"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enable Notifications"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/edit_rec_center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Save Change"
        app:layout_constraintTop_toBottomOf="@id/switch_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete Profile"
        app:layout_constraintTop_toTopOf="@id/button_save"
        app:layout_constraintStart_toEndOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
