...
        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="12sp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

...
